--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   app:
     build:
@@ -7,13 +5,15 @@ services:
       dockerfile: Dockerfile
       args:
         - KAGGLE_USERNAME=${KAGGLE_USERNAME}  # Pass the username as a build argument
-        - KAGGLE_KEY=${KAGGLE_KEY}  # Pass the key as a build argument
-    runtime: nvidia  # Enable GPU support
-    env_file: .env  # Load environment variables from .env
+        - KAGGLE_KEY=${KAGGLE_KEY}            # Pass the key as a build argument
+    env_file: .env                         # Load environment variables from .env
     environment:
       - KAGGLE_USERNAME=${KAGGLE_USERNAME}  # Pass the username at runtime
-      - KAGGLE_KEY=${KAGGLE_KEY}  # Pass the key at runtime
-      - NVIDIA_VISIBLE_DEVICES=all  # Make all GPUs visible
+      - KAGGLE_KEY=${KAGGLE_KEY}            # Pass the key at runtime
     volumes:
-      - .:/app  # Mount the current directory into the container
-    command: tail -f /dev/null  # Keep the container running
+      - .:/app                           # Mount the current directory into the container
+    command: tail -f /dev/null            # Keep the container running
+    gpus:
+      - driver: nvidia
+        count: all
+        capabilities: [gpu]
