--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,16 +4,19 @@ services:
       context: .
       dockerfile: Dockerfile
       args:
-        - KAGGLE_USERNAME=${KAGGLE_USERNAME}  # Pass the username as a build argument
-        - KAGGLE_KEY=${KAGGLE_KEY}            # Pass the key as a build argument
-    env_file: .env                         # Load environment variables from .env
+        - KAGGLE_USERNAME=${KAGGLE_USERNAME}
+        - KAGGLE_KEY=${KAGGLE_KEY}
+    env_file: .env
     environment:
-      - KAGGLE_USERNAME=${KAGGLE_USERNAME}  # Pass the username at runtime
-      - KAGGLE_KEY=${KAGGLE_KEY}            # Pass the key at runtime
+      - KAGGLE_USERNAME=${KAGGLE_USERNAME}
+      - KAGGLE_KEY=${KAGGLE_KEY}
     volumes:
-      - .:/app                           # Mount the current directory into the container
-    command: tail -f /dev/null            # Keep the container running
-    gpus:
-      - driver: nvidia
-        count: all
-        capabilities: [gpu]
+      - .:/app
+      - /etc/localtime:/etc/localtime:ro  # Corrige timezone no container
+    command: tail -f /dev/null
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              capabilities: [gpu]
